# tg-ai-bot

./: .env.example  .gitignore  README.md  README.ru.md
admin-panel/src/: App.tsx  routes.ts
ai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
ai-service/config/: history.py  kafka.py  llm.py  profile_roast.py  prompts.py  settings.py  throttle.py
ai-service/grpcserver/: admin.py  grpc.py  server.py
ai-service/kafka/: profile_worker.py
ai-service/llm/: choices.py  errors.py  g4f_models.py  g4f_setup.py  manager.py  profile_analyzer.py  profile_persistence.py  profile_service.py
ai-service/llm/history/: messages.py  profile_roast_store.py  store.py
ai-service/llm/managers/: any_manager.py  factory.py  g4f_manager.py  litellm_manager.py  openai_manager.py
ai-service/ratelimit/: interceptor.py  limiter.py
ai-service/rpc/ai/v1/: ai_pb2.py  ai_pb2_grpc.py
ai-service/scripts/: gen_proto.sh
ai-service/utils/: dates.py  response.py  text.py
aiogram-service/: .env.example  Dockerfile  main.py  pyproject.toml  run.py
aiogram-service/config/: core.py
aiogram-service/core/: keyboards.py  routers.py
aiogram-service/kafka/: profile_results_consumer.py
deploy/: .env.example  docker-compose.yml
gateway/: go.mod
gateway-service/: .env.example  Dockerfile  go.mod  go.sum
postman/: RageAI.local.postman_environment.json  RageAI.postman_collection.json  grpcurl.sh
proto/: go.mod
scripts/: gen-proto.sh  test-throttling.sh
subscription-service/: .env.example  Dockerfile  docker-entrypoint.sh  go.mod  go.sum
(+57 files in other folders)
